# CLI-ToDo

./: README.MD
src/: CMakeLists.txt  buffer.c  buffer.h  consts.h  edit.c  edit.h  finish.c  finish.h  io.c  io.h  main.c
